; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/display/ThirdParty/SPL/src/extr_stm32f0xx_dac.c_DAC_ClearITPendingBit.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/display/ThirdParty/SPL/src/extr_stm32f0xx_dac.c_DAC_ClearITPendingBit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@DAC = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DAC_ClearITPendingBit(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @IS_DAC_CHANNEL(i32 %5)
  %7 = call i32 @assert_param(i32 %6)
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @IS_DAC_IT(i32 %8)
  %10 = call i32 @assert_param(i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* %3, align 4
  %13 = shl i32 %11, %12
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @DAC, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  ret void
}

declare dso_local i32 @assert_param(i32) #1

declare dso_local i32 @IS_DAC_CHANNEL(i32) #1

declare dso_local i32 @IS_DAC_IT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
